@@ -51,6 +51,7 @@ ENOMSG	42
 ENOPROTOOPT	92
 ENOSPC	28
 ENOSYS	38
+ENOTBLK	15
 ENOTCONN	107
 ENOTDIR	20
 ENOTEMPTY	39
@@ -69,6 +70,7 @@ EPROTO	71
 EPROTONOSUPPORT	93
 EPROTOTYPE	91
 ERANGE	34
+EREMOTE	66
 EROFS	30
 ESHUTDOWN	108
 ESOCKTNOSUPPORT	94
@@ -78,5 +80,75 @@ ESTALE	116
 ETIMEDOUT	110
 ETOOMANYREFS	109
 ETXTBSY	26
+EUSERS	87
 EWOULDBLOCK	11
 EXDEV	18
+ECHRNG	44
+EL2NSYNC	45
+EL3HLT	46
+EL3RST	47
+ELNRNG	48
+EUNATCH	49
+ENOCSI	50
+EL2HLT	51
+EBADE	52
+EBADR	53
+EXFULL	54
+ENOANO	55
+EBADRQC	56
+EBADSLT	57
+EBFONT	59
+ENONET	64
+ENOPKG	65
+EADV	68
+ESRMNT	69
+ECOMM	70
+EDOTDOT	73
+ENOTUNIQ	76
+EBADFD	77
+EREMCHG	78
+ELIBACC	79
+ELIBBAD	80
+ELIBSCN	81
+ELIBMAX	82
+ELIBEXEC	83
+ERESTART	85
+ESTRPIPE	86
+EUCLEAN	117
+ENOTNAM	118
+ENAVAIL	119
+EISNAM	120
+EREMOTEIO	121
+ENOMEDIUM	123
+EMEDIUMTYPE	124
+ENOKEY	126
+EKEYEXPIRED	127
+EKEYREVOKED	128
+EKEYREJECTED	129
+ERFKILL	132
+EHWPOISON	133
+EPWROFF	
+EDEVERR	
+EBADEXEC	
+EBADARCH	
+ESHLIBVERS	
+EBADMACHO	
+ENOPOLICY	
+EQFULL	
+EDOOFUS	
+ENOTCAPABLE	
+ECAPMODE	
+EPROCLIM	
+EBADRPC	
+ERPCMISMATCH	
+EPROGUNAVAIL	
+EPROGMISMATCH	
+EPROCUNAVAIL	
+EFTYPE	
+EAUTH	
+ENEEDAUTH	
+ENOATTR	
+ENOSTR	60
+ENODATA	61
+ETIME	62
+ENOSR	63
