@@ -51,6 +51,7 @@ ENOMSG	91
 ENOPROTOOPT	42
 ENOSPC	28
 ENOSYS	78
+ENOTBLK	15
 ENOTCONN	57
 ENOTDIR	20
 ENOTEMPTY	66
@@ -69,6 +70,7 @@ EPROTO	100
 EPROTONOSUPPORT	43
 EPROTOTYPE	41
 ERANGE	34
+EREMOTE	71
 EROFS	30
 ESHUTDOWN	58
 ESOCKTNOSUPPORT	44
@@ -78,5 +80,75 @@ ESTALE	70
 ETIMEDOUT	60
 ETOOMANYREFS	59
 ETXTBSY	26
+EUSERS	68
 EWOULDBLOCK	35
 EXDEV	18
+ECHRNG	
+EL2NSYNC	
+EL3HLT	
+EL3RST	
+ELNRNG	
+EUNATCH	
+ENOCSI	
+EL2HLT	
+EBADE	
+EBADR	
+EXFULL	
+ENOANO	
+EBADRQC	
+EBADSLT	
+EBFONT	
+ENONET	
+ENOPKG	
+EADV	
+ESRMNT	
+ECOMM	
+EDOTDOT	
+ENOTUNIQ	
+EBADFD	
+EREMCHG	
+ELIBACC	
+ELIBBAD	
+ELIBSCN	
+ELIBMAX	
+ELIBEXEC	
+ERESTART	
+ESTRPIPE	
+EUCLEAN	
+ENOTNAM	
+ENAVAIL	
+EISNAM	
+EREMOTEIO	
+ENOMEDIUM	
+EMEDIUMTYPE	
+ENOKEY	
+EKEYEXPIRED	
+EKEYREVOKED	
+EKEYREJECTED	
+ERFKILL	
+EHWPOISON	
+EPWROFF	82
+EDEVERR	83
+EBADEXEC	85
+EBADARCH	86
+ESHLIBVERS	87
+EBADMACHO	88
+ENOPOLICY	103
+EQFULL	106
+EDOOFUS	
+ENOTCAPABLE	
+ECAPMODE	
+EPROCLIM	67
+EBADRPC	72
+ERPCMISMATCH	73
+EPROGUNAVAIL	74
+EPROGMISMATCH	75
+EPROCUNAVAIL	76
+EFTYPE	79
+EAUTH	80
+ENEEDAUTH	81
+ENOATTR	93
+ENOSTR	99
+ENODATA	96
+ETIME	101
+ENOSR	98
